--- a/app/src/main/res/layout/en_floating_view.xml
+++ b/app/src/main/res/layout/en_floating_view.xml
@@ -11,7 +11,7 @@
         android:layout_width="80dp"
         android:layout_height="100dp"
         android:adjustViewBounds="true"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:src="@mipmap/feedback_icon"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
