--- a/app/src/main/res/layout/activity_draw_feedback.xml
+++ b/app/src/main/res/layout/activity_draw_feedback.xml
@@ -130,7 +130,7 @@
         android:gravity="center_vertical"
         android:text="完成"
         android:visibility="gone"
-        android:textColor="#ff0000"
+        android:textColor="#F84C4B"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -142,7 +142,7 @@
         android:layout_marginEnd="15dp"
         android:gravity="center_vertical"
         android:text="反馈"
-        android:textColor="#ff0000"
+        android:textColor="#F84C4B"
         android:textSize="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
